fix powered by google search, link to page 1

--- a/rogers_posts_page02.html
+++ b/rogers_posts_page02.html
@@ -1027,7 +1027,7 @@ posthaste. Games, inspiration and <em>possible </em>port to NIT to follow.</p>
 
 	<div class="navigation">
 			<div class="left"><a href="./rogers_posts_page03.html"><span>«</span> Older Posts</a></div>
-		<div class="right"><a href="http://www.internettablettalk.com/author/rogers/">More Recent Posts <span>»&nbsp;&nbsp;&nbsp;</span></a></div>
+		<div class="right"><a href="./rogers_posts_page01.html">More Recent Posts <span>»&nbsp;&nbsp;&nbsp;</span></a></div>
 		<div class="clear"></div>
 	</div>
 
@@ -1074,7 +1074,7 @@ posthaste. Games, inspiration and <em>possible </em>port to NIT to follow.</p>
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS%20archive%20at%20Internet%20Tablet%20Talk2_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
