--- a/rogers_posts_page03.html
+++ b/rogers_posts_page03.html
@@ -1088,7 +1088,7 @@ worrying about whether mine was the house next to <a href="http://talk.maemo.com
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive3_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
