--- a/rogers_posts_page05.html
+++ b/rogers_posts_page05.html
@@ -869,7 +869,7 @@ Communication Technologies for Development). Congratulations to the <a href="htt
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive5_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
