--- a/rogers_posts_page06.html
+++ b/rogers_posts_page06.html
@@ -968,7 +968,7 @@ or Chinook, although it’s influenced by both. Maemo is from now on a <a href="
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
