--- a/rogers_posts_page07.html
+++ b/rogers_posts_page07.html
@@ -977,7 +977,7 @@ week).</p>
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive7_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
