--- a/rogers_posts_page04.html
+++ b/rogers_posts_page04.html
@@ -950,7 +950,7 @@ here at ITT to add the specific people they want to thank to this list.</p>
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive4_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
