--- a/rogers_posts_page08.html
+++ b/rogers_posts_page08.html
@@ -995,7 +995,7 @@ Probably.</p>
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive8_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
