--- a/rogers_posts_page09.html
+++ b/rogers_posts_page09.html
@@ -922,7 +922,7 @@ there, like the radio.
     </form>
   </div>
   <div class="cse-branding-logo">
-    <img src="RogerS_itT_archive9_files/poweredby_000000.gif" alt="Google">
+    <img src="./auxi/pix/standard/poweredby_000000.gif" alt="Google"/>
   </div>
   <div class="cse-branding-text">
     Custom Search
