fix links to other tablet sites

--- a/rogers_posts_page05.html
+++ b/rogers_posts_page05.html
@@ -928,12 +928,12 @@ border='0' alt='' /></a></noscript>
 						</ul>
 		</div>		<div id="text-2" class="moduletable">			<h3>Tablet Sites</h3>
 			<div class="textwidget"><center>
-<div class="badge"><a href="http://www.maemo.org/" rel="nofollow"><img src="./auxi/pix/maemo.jpg"></a></div>
-<div class="badge"><a href="http://www.maemoapps.com/" rel="nofollow"><img src="./auxi/pix/maemoapps.jpg"></a></div>
-<div class="badge"><a href="http://tabletschool.blogspot.com/" rel="nofollow"><img src="./auxi/pix/itschool.jpg"></a></div>
-<div class="badge"><a href="http://nokia.com/os2008/" rel="nofollow"><img src="./auxi/pix/os2008.jpg"></a></div>
-<div class="badge"><a href="http://www.tabletblog.com/" rel="nofollow"><img src="./auxi/pix/tabletblog.jpg"></a></div>
-<div class="badge"><a href="http://www.tablet-guru.com/" rel="nofollow"><img src="./auxi/pix/tabletguru.jpg"></a></div>
+<div class="badge"><a href="http://www.maemo.org/" rel="nofollow"><img src="./auxi/pix/standard/maemo.jpg"></a></div>
+<div class="badge"><a href="http://www.maemoapps.com/" rel="nofollow"><img src="./auxi/pix/standard/maemoapps.jpg"></a></div>
+<div class="badge"><a href="http://tabletschool.blogspot.com/" rel="nofollow"><img src="./auxi/pix/standard/itschool.jpg"></a></div>
+<div class="badge"><a href="http://nokia.com/os2008/" rel="nofollow"><img src="./auxi/pix/standard/os2008.jpg"></a></div>
+<div class="badge"><a href="http://www.tabletblog.com/" rel="nofollow"><img src="./auxi/pix/standard/tabletblog.jpg"></a></div>
+<div class="badge"><a href="http://www.tablet-guru.com/" rel="nofollow"><img src="./auxi/pix/standard/tabletguru.jpg"></a></div>
 </center>
 <a href="http://www.tablet-guru.com/" rel="nofollow"><br></a></div>
 <a href="http://www.tablet-guru.com/" rel="nofollow">		</a></div>
