--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -269,6 +269,14 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 		Author Archive for RogerS		</h2>
 
 
+    <div class="navigation">
+            <div class="left"><a href="./rogers_posts_page02.html"><span>«</span> Older Posts</a></div>
+        <div class="right"><a href="./rogers_posts_page00.html">More Recent Posts <span>»&nbsp;&nbsp;&nbsp;</span></a></div>
+        <div class="clear"></div>
+    </div>
+
+
+    <br>
 
 
 
@@ -1170,12 +1178,12 @@ border='0' alt='' /></a></noscript>
 						</ul>
 		</div>		<div id="text-2" class="moduletable">			<h3>Tablet Sites</h3>
 			<div class="textwidget"><center>
-<div class="badge"><a href="http://www.maemo.org/" rel="nofollow"><img src="./auxi/pix/maemo.jpg"></a></div>
-<div class="badge"><a href="http://www.maemoapps.com/" rel="nofollow"><img src="./auxi/pix/maemoapps.jpg"></a></div>
-<div class="badge"><a href="http://tabletschool.blogspot.com/" rel="nofollow"><img src="./auxi/pix/itschool.jpg"></a></div>
-<div class="badge"><a href="http://nokia.com/os2008/" rel="nofollow"><img src="./auxi/pix/os2008.jpg"></a></div>
-<div class="badge"><a href="http://www.tabletblog.com/" rel="nofollow"><img src="./auxi/pix/tabletblog.jpg"></a></div>
-<div class="badge"><a href="http://www.tablet-guru.com/" rel="nofollow"><img src="./auxi/pix/tabletguru.jpg"></a></div>
+<div class="badge"><a href="http://www.maemo.org/" rel="nofollow"><img src="./auxi/pix/standard/maemo.jpg"></a></div>
+<div class="badge"><a href="http://www.maemoapps.com/" rel="nofollow"><img src="./auxi/pix/standard/maemoapps.jpg"></a></div>
+<div class="badge"><a href="http://tabletschool.blogspot.com/" rel="nofollow"><img src="./auxi/pix/standard/itschool.jpg"></a></div>
+<div class="badge"><a href="http://nokia.com/os2008/" rel="nofollow"><img src="./auxi/pix/standard/os2008.jpg"></a></div>
+<div class="badge"><a href="http://www.tabletblog.com/" rel="nofollow"><img src="./auxi/pix/standard/tabletblog.jpg"></a></div>
+<div class="badge"><a href="http://www.tablet-guru.com/" rel="nofollow"><img src="./auxi/pix/standard/tabletguru.jpg"></a></div>
 </center>
 <a href="http://www.tablet-guru.com/" rel="nofollow"><br></a></div>
 <a href="http://www.tablet-guru.com/" rel="nofollow">		</a></div>
