--- a/rogers_posts_page00.html
+++ b/rogers_posts_page00.html
@@ -611,7 +611,7 @@ border='0' alt='' /></a></noscript>
         <script style="display: none;" type="text/javascript" src="RogerS_itT_archive9_files/tags.js"></script>
       </center>
       <!-- TF 160x600 JScript VAR code -->
- </div><div id="samsarin-php-2" class="moduletable"><h3> Amazon </h3>
+ </div><div id="samsarin-php-2" class="moduletable"><h3> </h3>
  <iframe src="RogerS_itT_archive9_files/cm.html" marginwidth="0" marginheight="0" border="0" style="border: medium none ; display: none;" frameborder="0" height="600" scrolling="no" width="160"></iframe>
  </div>     <div id="recent-posts" class="moduletable">         <h3>Frontpage Latest</h3>
             <ul class="triangle-2">
