insert or restore bf read-ins

--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -984,7 +984,7 @@ orally.</p>
 <p>Should each vowel be pronounced, making this one really short three-syllable word? Could be.</p>
 <p>Should the first syllable be pronounced the same as the month of May? Makes sense.</p>
 <p>Or does <em>a</em> followed by <em>e</em> represent the <em>ae</em> diphthong, which if really stretched out would be “maaa-eee” but which English speakers consider a long <em>i</em>: “my”? Well, yes, why not?</p>
-<p>I’ve heard all these pronunciations used at OSiMWorld the past
+<p><strong>I’ve heard</strong>  all these pronunciations used at OSiMWorld the past
 couple days, plus the “two-and-a-half-syllable” variation (really short
 e) and the “silent a” (”me”-mo).</p>
 <p>Now some might argue that, as a trademark, Maemo’s pronunciation is
@@ -1051,7 +1051,7 @@ the envelope.</p>
 <p>My son’s friend does as much or more with his iPod Touch (16GB model
 for $269.99) [1], — even though it is more restricted in what it can
 do. </p>
-<p><b>Both Apple’s and Nokia’s tablets</b> forgo disk drives,
+<p><strong>Both Apple’s and Nokia’s tablets</strong> forgo disk drives,
 emphasizing the screen. But the iPod touch and its progenitor, the
 iPhone, instantly persuade you that a keyboard is unneeded and
 unnecessary. The media aspects — video and YouTube video, music and
@@ -1066,7 +1066,7 @@ to concede that bundling the connection with the screen appeals to more
 people than separating them.</p>
 <p>I’m reminded of the quote from a French revolutionary leader [2], “There go the people. I must follow them. I am their leader.”</p>
 <p>Um, the people are heading off in another direction. </p>
-<p><b>Are we going with them?</b> And if so, what is necessary for the Nokia Internet Tablet to remain in the forefront of the tablet revolution?</p>
+<p><strong>Are we going with them?</strong> And if so, what is necessary for the Nokia Internet Tablet to remain in the forefront of the tablet revolution?</p>
 <p>Dropping the price would keep it there. (For a while, anyway.) Some
 people have argued the interface ought to abandon the computer GUI
 heritage and adopt a big-graphic Apple-like approach. You know you’ll
@@ -1086,7 +1086,7 @@ semi-revolutionary walk-around-the-office-or-home-only web. So, one way
 or another, that has to change. Maybe it means we’ll see a phone added
 to the NIT. Or phone/NIT bundles from the carriers. Or WiFi-hotspot/NIT
 bundles. </p>
-<p><b>Unless it gives me the web</b> everywhere, the NIT falls into the merely convenient and not revolutionary category.</p>
+<p><strong>Unless it gives me the web</strong> everywhere, the NIT falls into the merely convenient and not revolutionary category.</p>
 <p>Of course, there is one way we’re still participating in
 revolutionary activity. That’s via the FLOSS/Linux connection. The
 keyboard on the N810 may be a step backward from the perspective of the
@@ -1100,7 +1100,7 @@ of the open nature of that earlier revolution. </p>
 revolution, one in which the benefits accrue mostly to one company
 (which provides more entertaining or novel experiences to us customers
 than we got before).</p>
-<p><b>When you see Nokia</b> giving its $800-million investment in
+<p><strong>When you see Nokia</strong> giving its $800-million investment in
 Symbion to an open-source foundation, you know that it is acting in its
 own financial interests. Nothing else could explain such sums. The
 tablet/phone OS field is weighted in favor of Apple and Microsoft and
