insert note concerning bad links

--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -267,6 +267,7 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 
 			<h2>
 		Author Archive for RogerS		</h2>
+                    <p><em style="color: #59a2b2">Note: Links may not work or may take you to an archived page at the Internet Archive.</em><br />
 
 
     <div class="navigation">
@@ -512,7 +513,7 @@ but instead relied solely on my N800’s* for my tablet needs. </p>
 <p>Then last Thursday, I ordered an N810 from Buy.com, paying $227.86**
 for the little treasure that arrived this morning. (It’s sitting next
 to me on the computer desk, charging now.)</p>
-<p>Why? </p>
+<p><strong><em>Why? </em></strong></p>
 <p>I’ve been pondering that. Maybe subconsciously I think I’ll use the
 built-in GPS (even though I rarely use the external GPS I own). I don’t
 really type faster with the N810’s slide-out keyboard, though I know
@@ -522,7 +523,7 @@ more than I’ve been aware? Could be. I know that my tap-drags to get an
 upper-case letter succeeds only about 60-80 percent of the time, so
 entering some characters is way slower than is good***.</p>
 <p>And, trivial as they may seem, I know I’ve missed the screen-lock button and the cover-that-doesn’t-fall-off.</p>
-<p>These are little things, and I’m struggling to find any bigger
+<p><strong>These are little things</strong>, and I’m struggling to find any bigger
 reasons for using an N810 instead of an N800. OK, “little things mean a
 lot,” but two hundred-plus dollars’ worth?</p>
 <p>Still, I’m content with my purchase. Something in me knows this is a
