adjust note size

--- a/rogers_posts_page02.html
+++ b/rogers_posts_page02.html
@@ -267,7 +267,7 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 
 			<h2>
 		Author Archive for RogerS		</h2>
-<p><em style="color: #59a2b2">Note: Links may not work or may take you to an archived page at the Internet Archive.</em>
+<p><em style="color: #59a2b2; font-size:10pt">Note: Links may not work or may take you to an archived page at the Internet Archive.</em>
 <br />
 
 
@@ -350,7 +350,7 @@ maemo.org is one step in separating Nokia’s own use of Maemo from
 others’. Now maemo.org will be an expression of the community and not
 of the Nokia team. Or something like that.</p>
 <p>Hence <a href="http://wiki.maemo.org/Maemo.org_logo_contest_submissions#rsperberg" title="Link to the logos I've submitted">my logo design</a>:</p>
-<p><img src="RogerS%20archive%20at%20Internet%20Tablet%20Talk2_files/maemoorg_logo_contest_rsperberg_6.png" alt="A logo for the Maemo community"></p>
+<p><img src=".auxi/pix/maemoorg_logo_contest_rsperberg_6.png" alt="A logo for the Maemo community"></p>
 <p>Maemo.org isn’t a company and even the “dot org” is an honorific
 rather than recognition that a real organization has existed. But as a
 community, it represents the group of people who all contribute toward
