--- a/rogers_posts_page05.html
+++ b/rogers_posts_page05.html
@@ -268,7 +268,7 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 
 			<h2>
 		Author Archive for RogerS		</h2>
-<p><em style="color: #59a2b2">Note: Links may not work or may take you to an archived page at the Internet Archive.</em>
+<p><em style="color: #59a2b2; font-size:10pt">Note: Links may not work or may take you to an archived page at the Internet Archive.</em>
 <br />
 
 
