fix typo in link to maemoorg graphic

--- a/rogers_posts_page02.html
+++ b/rogers_posts_page02.html
@@ -350,9 +350,9 @@ maemo.org is one step in separating Nokia’s own use of Maemo from
 others’. Now maemo.org will be an expression of the community and not
 of the Nokia team. Or something like that.</p>
 <p>Hence <a href="http://wiki.maemo.org/Maemo.org_logo_contest_submissions#rsperberg" title="Link to the logos I've submitted">my logo design</a>:</p>
-<p><img src=".auxi/pix/maemoorg_logo_contest_rsperberg_6.png" alt="A logo for the Maemo community"/></p>
+<p><img src="./auxi/pix/maemoorg_logo_contest_rsperberg_6.png" alt="A logo for the Maemo community"/></p>
 <p>Maemo.org isn’t a company and even the “dot org” is an honorific
-rather than recognition that a real organization has existed. But as a
+rather than recognition that a real organization has existed. But as a/
 community, it represents the group of people who all contribute toward
 the same goal. So in my interpretation of the maemo.org logo, you don’t
 get machined results or perfect alignment. Yet it’s precisely this
