fix spacing after blockquote

--- a/rogers_posts_page07.html
+++ b/rogers_posts_page07.html
@@ -505,7 +505,7 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 				<!-- or (function_exists('is_tag') and is_tag()) -->
 				<p>I’m at work and haven’t had opportunity to flash the new OS.</p>
 <p>But I read <a title="Link to post in ITT forum" href="http://talk.maemo.com/showthread.php?p=57062&amp;postcount=116">this comment</a> from <a title="Link to TabulaRasa's page at ITT" href="http://www.internettablettalk.com/forums/member.php?u=5728">TabulaRasa</a> in the thread about the new release with Skype and Flash9:</p>
-<blockquote><p>When I run Gtalk and open the webcam, the camera shows up within Gtalk.</p></blockquote>
+<blockquote>When I run Gtalk and open the webcam, the camera shows up within Gtalk.</blockquote>
 <p>Well, I know there’s a Google Talk plugin for PC’s with a webcam
 that allow you to use video and even have video calls with Skype users.
 It’s called Festoon. It came out last year, and I have no idea why I
