remove p inside blockquote

--- a/rogers_posts_page07.html
+++ b/rogers_posts_page07.html
@@ -647,10 +647,10 @@ per minute at Gizmo with no minimum monthly.</p>
 				<!-- or (function_exists('is_tag') and is_tag()) -->
 				<p><em>More tangential thoughts prompted by <a title="Link to The Mossberg Solution: 'The iPhone is a breakthrough handheld computer'" href="http://solution.allthingsd.com/20070626/the-iphone-is-breakthrough-handheld-computer/">an iPhone review</a>:</em></p>
 <p>Walt Mossberg, writing for the <em>Wall Street Journal</em>, hit the nail on the head:</p>
-<blockquote><p>[T]he iPhone is, on balance, <strong><em>a beautiful and breakthrough handheld computer.</em></strong>
+<blockquote>[T]he iPhone is, on balance, <strong><em>a beautiful and breakthrough handheld computer.</em></strong>
 [Emphasis added.] Its software, especially, sets a new bar for the
 smart-phone industry, and its clever finger-touch interface, which
-dispenses with a stylus and most buttons, works well ….</p></blockquote>
+dispenses with a stylus and most buttons, works well ….</blockquote>
 <p>Maybe it’s beginning to sink in that there’s now a category of
 devices fitting in-between PDA’s and notebooks. They’re computers, and
 they’re something else. (Not <em>every</em>-thing else.) Apple’s iPhone and the Nokia Internet Tablet are just the first, best exemplars.</p>
