fix blockquote spacing throughout

--- a/rogers_posts_page03.html
+++ b/rogers_posts_page03.html
@@ -328,7 +328,7 @@ connections (2-4 Mbps, with peaks of up to 10 Mbps) for users on the
 move.</p>
 <p>The device will be “available in the United States during the summer of 2008 in areas where WiMAX connectivity is available.”</p>
 <p>Nokia also announced an</p>
-<blockquote>upgraded OS2008 [that] introduces useful new features to
+<blockquote>“upgraded OS2008 [that] introduces useful new features to
 the platform, including an enhanced e-mail client, support for Chinese
 character rendering in the browser and RSS feeds and Seamless Software
 Update functionality to eliminate manual software updates, making
@@ -336,7 +336,7 @@ periodic updates of the operating system quick and easy. While standard
 on the Nokia N810 WiMAX Edition, current owners of Nokia N810 and N800
 Internet Tablets with earlier operating systems will be able to upgrade
 their device to the revised operating system for free during the second
-quarter of 2008.</blockquote>
+quarter of 2008.”</blockquote>
 <p>I’m not sure if this adds anything to what we already knew about the
 next OS release, but since Reggie is having all the fun in Las Vegas,
 I’m reduced to reading and re-reading the press release.</p>
@@ -346,15 +346,14 @@ consumers previously only expected on a desktop PC, the Nokia N810
 WiMAX Edition is a compelling example of how next generation broadband
 wireless technology will not only change the way people think about the
 Internet, it will change the very nature of the Internet itself,” said
-Ari Virtanen, Vice President of Convergence Products for Nokia. </p>
-<p>“Much in the way that the evolution of the fixed Internet from
+Ari Virtanen, Vice President of Convergence Products for Nokia. <br /><br />
+“Much in the way that the evolution of the fixed Internet from
 dial-up to broadband enabled a host of new Internet services and
 changed people’s expectations of what an Internet experience should be,
 the transition to a broadband Internet experience set free from the
 constraints of a fixed network will spark the next wave of new mobile
 Internet services, and will forever change the perception of what the
-Internet can be.”
-</blockquote>
+Internet can be.”</blockquote>
 <p>I think Ari means the walkaround web is a totally new experience and
 the new tablet will be the first to deliver it in this form. No
 argument there. (I guess if you’re in one of those WiMAX locations,
