--- a/rogers_posts_page04.html
+++ b/rogers_posts_page04.html
@@ -325,11 +325,11 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 mill in Tampere, south-western Finland. It took on the name Nokia after
 moving the mill to the banks of the Nokianvirta river in the town of
 Nokia. The word "Nokia" in Finnish, by the way, means a dark, furry
-animal we now call the Pine Marten weasel.</p>
-<p>The modern company we know as the Nokia Corporation was actually a
+animal we now call the Pine Marten weasel.<br /><br />
+The modern company we know as the Nokia Corporation was actually a
 merger between Finnish Rubber Works (which also used a Nokia brand),
-the Nokia Wood Mill, and the Finnish Cable Works in 1967.</p>
-<p>Before focusing on telecommunications and cell phones, Nokia
+the Nokia Wood Mill, and the Finnish Cable Works in 1967.<br /><br />
+Before focusing on telecommunications and cell phones, Nokia
 produced paper products, bicycle and car tires, shoes, television,
 electricity generators, and so on.</blockquote>
 <p>I like the fish!</p>
@@ -681,8 +681,8 @@ were never harbingers of a web paradigm shift.</p>
 <blockquote>Nokia Corp., the world’s No. 1 mobile phone maker, on
 Thursday said that fourth-quarter net profit surged 44 percent to $2.6
 billion and that it had reached its long-term goal of 40 percent market
-share in handset sales. The company’s stock soared.</p>
-<p>Finland-based Nokia said that net sales in October through December
+share in handset sales. The company’s stock soared.<br /><br />
+Finland-based Nokia said that net sales in October through December
 grew 34 percent to 15.7 billion euros ($22.9 billion), and that it sold
 more than 133 million handsets — up 27 percent from the same period in
 2006.</blockquote>
