--- a/rogers_posts_page06.html
+++ b/rogers_posts_page06.html
@@ -506,8 +506,8 @@ comparable.)</p>
 phones into powerful mobile computers that could accelerate the
 convergence of computing and communications.</blockquote>
 <p><em>The Times </em>points out:</p>
-<blockquote>Users would have the ability to load up their phones with new features and third-party programs.</p>
-<p>“Today the Internet experience on hand-held devices is not
+<blockquote>Users would have the ability to load up their phones with new features and third-party programs.<br /><br />
+“Today the Internet experience on hand-held devices is not
 optimized,” said Peter Chou, chief executive of HTC, one of the largest
 makers of smartphones. “The whole idea is to optimize the Internet
 experience.” </blockquote>
