--- a/rogers_posts_page07.html
+++ b/rogers_posts_page07.html
@@ -653,7 +653,7 @@ smart-phone industry, and its clever finger-touch interface, which
 dispenses with a stylus and most buttons, works well ….</blockquote>
 <p>Maybe it’s beginning to sink in that there’s now a category of
 devices fitting in-between PDA’s and notebooks. They’re computers, and
-they’re something else. (Not <em>every</em>-thing else.) Apple’s iPhone and the Nokia Internet Tablet are just the first, best exemplars.</p>
+they’re something else. (Not <strong><em>every</em></strong>-thing else.) Apple’s iPhone and the Nokia Internet Tablet are just the first, best exemplars.</p>
 <p>The iPhone doesn’t have a hard drive or a keyboard. It commits huge
 resources to its gorgeous screen and flexible OS. It’s driven largely
 by realization that we all want a walkaround web.</p>
