insert links to p1 for home, itT logo, archive hed

--- a/rogers_posts_page06.html
+++ b/rogers_posts_page06.html
@@ -218,13 +218,13 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
           <div class="shadow-3"></div>
           <!-- begin header -->
           <div id="header">
-            <div id="logo-space"><img src="./auxi/pix/standard/logo.png" alt="logo" id="logo" border="0"></div>
+            <div id="logo-space"><a href="./rogers_posts_page01.html" title="link to first page of archive"><img src="./auxi/pix/standard/logo.png" alt="" id="logo" border="0"/></a></div>
           </div>
           <div id="mod-top"> </div>
         </div>
         <div id="trans-menu">
           <ul class="menu" id="horiznav">
-            <li><img src="./auxi/pix/standard/tglobe.png" alt="globe" border="0"></li>
+            <li><a href="./rogers_posts_page01.html" title="link to first page of archive"><img src="./auxi/pix/standard/tglobe.png" alt="globe" border="0"></a></li>
             <li><img src="./auxi/pix/standard/tforum.png" alt="forum" border="0"></li>
             <li><img src="./auxi/pix/standard/t101.png" alt="tablet 101" border="0"></li>
             <li><img src="./auxi/pix/standard/tgallery.png" alt="gallery" border="0"></li>
@@ -265,8 +265,8 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 
 				<div id="primarycontent" class="hfeed">
 
-			<h2>
-		Author Archive for RogerS		</h2>
+			<a href="./rogers_posts_page01.html" style="color:#f8f8f8;"><h2>
+		Author Archive for RogerS		</h2></a>
 <p><em style="color: #59a2b2; font-size:10pt">Note: Links may not work or may take you to an archived page at the Internet Archive.</em>
 <br />
 
