correct typo in timer post

--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -445,8 +445,7 @@ connectivity into the mix.</p>
 track of how much time you have left to talk in a presentation or a
 meeting presents special difficulties. As evidence that no good
 solution exists for the problem, I point to the universal practice of
-appointing a single individual to keep track of the time who is
-delegated to conveys the impending end of the allotted time to the
+appointing a single individual to keep track of the time who conveys the impending end of the allotted time to the
 speaker. Any time a simple task is done by a human, you know it’s not
 all that simple. But we all know that watch displays are too small, the
 laptop is occupied presenting slides, a one-minute alert is fine but
