inserted missing 'the'

--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -460,7 +460,7 @@ up), splits, or a circle clockface with a single hand sweeping once
 around the face whatever time you have entered.</p>
 <p>You can run this useful app from the website if you want. Me, I
 simply downloaded the .swf file, put it into a /tools folder, opened it
-in tablet’s browser and bookmarked that local copy. Easy to grab. And
+in the tablet’s browser and bookmarked that local copy. Easy to grab. And
 of course the graphics resize nicely as I switch between standard and
 full-screen display. Hey, thanks, online-stopwatch person!</p>
 
