--- a/rogers_posts_page01.html
+++ b/rogers_posts_page01.html
@@ -10,6 +10,7 @@
  	<meta name="description" content="Internet Tablet Talk - the source for all Internet Tablet related information.">
 	<link href="./auxi/css//template.css" rel="stylesheet" type="text/css">
 	<link href="./auxi/css//style5.css" rel="stylesheet" type="text/css">
+          <link href='http://fonts.googleapis.com/css?family=Share:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 
 
