--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Skype on top of a Linux kernel.” </p>
                                             <p>A tablet for lazy surfing, a netbook for travel, an iPhone for when we don't even want to carry that much, a full laptop for everyday work, and even a full desktop as the multimedia workhorse: at these price levels we may very well have 5-6 or purpose-designed computers, situational devices. Pick up one, continue on the other as you move around — the switch should be seamless ...  </p>
                                             </blockquote>
                                         </div>
-                                        <p>Well, I'd sure like a 12-inch screen for surfing ... and something that fits in my pocket ... and that I can read on while I'm falling asleep ... or do some work on ... or watch a movie on ... Yes, maybe 5 or 6 different devices <strong><em>is</em></strong> what I want.</p>
+                                        <p>Well, I'd sure like a 12-inch screen for surfing ... and something that fits in my pocket ... and that I can read on while I'm falling asleep ... or do some work on ... or watch a movie on ... Yes, maybe 5 or 6 different devices <strong><em><span style="font-family:Share-BoldItalic;">is</em></strong> what I want.</p>
 
 
 			</div> <!-- .entry-content -->
