adjust bf readin

--- a/RogerS_itT_posts_pg10.html
+++ b/RogerS_itT_posts_pg10.html
@@ -665,7 +665,7 @@ software, such as Google Talk. This is as opposed to proprietary
 approaches like Skype. The Gizmo Project’s value-add is that it offers
 users the option to pay nominal fees to connect to landline and mobile
 phones.</p>
-<p>I’ve used Gizmo, and I’ve used Skype, and I’ve used Google Talk, and
+<p><strong>I’ve used</strong> Gizmo, and I’ve used Skype, and I’ve used Google Talk, and
 I’ve used Vonage, and I’ve used cellphones (Verizon, Sprint, T-Mobile),
 and so on, and so on. (Landlines!) We all have. I know that pointing to
 another way to talk to people doesn’t make your heart beat faster, even
