lower-case Like

--- a/RogerS_itT_posts_pg12.html
+++ b/RogerS_itT_posts_pg12.html
@@ -495,7 +495,7 @@ and PenOffice and use it instead of their current feeble software. I
 really would use Notes then for just what it’s supposed to be, to jot
 down quick notes.</p>
 
-<p><strong>As for my other wish </strong>&nbsp;— Like others, I’m wanting more
+<p><strong>As for my other wish </strong>&nbsp;— like others, I’m wanting more
 capability out of Opera. But in my case, giving me a complete desktop
 Opera 9.0 wouldn’t satisfy me.</p>
 
