add link to pg16

--- a/RogerS_itT_posts_pg15.html
+++ b/RogerS_itT_posts_pg15.html
@@ -225,7 +225,7 @@ classid='clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B' codebase='http://www.apple.
 
 
     <div class="navigation">
-            <!--div class="left"><a href="./RogerS_itT_posts_pg16.html"><span>«</span> Older Posts</a></div  -->
+            <div class="left"><a href="./RogerS_itT_posts_pg16.html"><span>«</span> Older Posts</a></div>
         <div class="right"><a href="./RogerS_itT_posts_pg14.html">More Recent Posts <span>»&nbsp;&nbsp;&nbsp;</span></a></div>
         <div class="clear"></div>
     </div>
@@ -874,7 +874,7 @@ and work really well on the 770.</p>
 
 
     <div class="navigation">
-            <!--  div class="left"><a href="./RogerS_itT_posts_pg16.html"><span>«</span> Older Posts</a></div  -->
+            <div class="left"><a href="./RogerS_itT_posts_pg16.html"><span>«</span> Older Posts</a></div>
         <div class="right"><a href="./RogerS_itT_posts_pg14.html">More Recent Posts <span>»&nbsp;&nbsp;&nbsp;</span></a></div>
         <div class="clear"></div>
     </div>
