change link title to indicate link to Internet Archive

--- a/RogerS_itT_posts_pg01.html
+++ b/RogerS_itT_posts_pg01.html
@@ -549,7 +549,7 @@ move. This was so startling, sensible and incredible that all you had to do was 
 
 <p>When I’m asked what I want in the tablet — what users in general might want — I think about what apps on the desktop will acquire a whole new dimension when untethered from the desktop. Basically I’m just looking for a lesser version of the liberating effect we first experienced when the 770 untethered the web.</p>
 
-<p>So, obviously, I think about e-books, since the most infamous <a href="http://web.archive.org/web/20031210024134/http://www.content-exchange.com/cx/html/newsletter/3-2/oe3-2.htm" title="Link to 2001 interview">requirement for their success</a>, as Michael Kinsley so memorably put it, is that you can take your reading with you to the john.</p>
+<p>So, obviously, I think about e-books, since the most infamous <a href="http://web.archive.org/web/20031210024134/http://www.content-exchange.com/cx/html/newsletter/3-2/oe3-2.htm" title="Link to 2001 interview at the Internet Archive">requirement for their success</a>, as Michael Kinsley so memorably put it, is that you can take your reading with you to the john.</p>
 
 <p>Now, of course, FBreader gives us this already, it being probably the best engineered open-source e-reader around, providing the longest list of formats read and the greatest personalization of presentation.</p>
 
