add desktop image to Souping Up post

--- a/RogerS_itT_posts_pg16.html
+++ b/RogerS_itT_posts_pg16.html
@@ -535,6 +535,8 @@ to just the built-in apps so as to better understand what the typical
 user would experience. That was both a strategy and a tentative
 response to a new Linux computer.</p>
 
+<p><img src="./auxi/pix/My_Nokia_770_desktop.jpg" alt="My Nokia 770 desktop"></p>
+
 <p>Well, that decision lasted about three days. A vanilla 770 isn’t enough.</p>
 
 <p><strong>Actually, the first thing I did </strong>&nbsp;with my 770 was to change Home’s
